<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAdicionar"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginTop="32dp"
        android:onClick="BotaoPaciente"
        android:text="@string/pacientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonVerPaciente"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:onClick="BotaoMedicos"
        android:text="@string/medicos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdicionar" />

    <Button
        android:id="@+id/buttonMedicos"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:onClick="BotaoMaterial"
        android:text="@string/material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVerPaciente" />

    <Button
        android:id="@+id/buttonVerDespesas"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:onClick="BotaoDespesas"
        android:text="@string/despesas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedicos"
        app:layout_constraintVertical_bias="0.048" />
</androidx.constraintlayout.widget.ConstraintLayout>